--- a/assets/sass/partials/base/_menu-icon.scss
+++ b/assets/sass/partials/base/_menu-icon.scss
@@ -83,7 +83,7 @@
     background-color: transparent;
 
     rect {
-      // fill: $white;
+      fill: $black;
 
 // Animation -------------------------------------------------------------------
 // scss-lint:disable NestingDepth
